Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.10
-
None
-
Windows 10
-
-
13
-
ef504af2d7e24df215a8a6ce6ed2cd60d0ce2a8f (qt/tqtc-qtbase/5.15) 561ba60ea436c06f7aa88ae9c8a847f851851112 (qt/tqtc-qtbase/6.2.0)
-
Qt6_Foundation_Sprint 39, Qt6_Foundation_Sprint 40, Foundation_Sprint 41 (Team 1)
Description
I use QLocale().toString(QDateTme::currentDateTime()).
One of our users reports that month name is spelled incorrectly in Russian.
Example: "17 Март 2021 г." instead of "17 марта 2021 г." as shown by OS in its clock.
Why does not this function just query string from OS? I've tried to reproduce it - it works fine for me. So for me - Qt queries it from OS, for that user - it uses some internal mechanism.
Attachments
Issue Links
- duplicates
-
QTBUG-86279 QLocale::system()'s standaloneDayName() and dayName() use the same back-end
-
- Closed
-